# AdventOfCode2024

./: .gitignore  Cargo.toml  cspell.json
day_eight/: Cargo.toml
day_eight/src/: main.rs
day_eleven/: Cargo.toml
day_eleven/src/: main.rs
day_fifteen/: Cargo.toml  input-test.txt
day_fifteen/src/: main.rs  parser.rs  warehouse.rs
day_five/: Cargo.toml
day_five/src/: main.rs
day_four/: Cargo.toml
day_four/src/: main.rs
day_fourteen/: Cargo.toml
day_fourteen/src/: main.rs
day_nine/: Cargo.toml
day_nine/src/: main.rs
day_one/: Cargo.toml
day_one/src/: main.rs
day_seven/: Cargo.toml
day_seven/src/: main.rs  operator.rs
day_seventeen/: Cargo.toml
day_seventeen/src/: main.rs  parser.rs  types.rs  u3.rs
day_six/: Cargo.toml
day_six/src/: main.rs
day_sixteen/: Cargo.toml
day_sixteen/src/: logger_experiment.rs  main.rs  parser.rs
day_ten/: Cargo.toml
day_ten/src/: main.rs
day_thirteen/: Cargo.toml
day_thirteen/src/: main.rs
day_three/: Cargo.toml
day_three/src/: main.rs
day_twelve/: Cargo.toml
day_twelve/src/: main.rs
day_two/src/: main.rs
