[workspace]

members = [
    "day_eight",
    "day_eleven", "day_fifteen",
    "day_five",
    "day_four",
    "day_fourteen",
    "day_nine",
    "day_one",
    "day_seven",
    "day_six",
    "day_ten",
    "day_thirteen",
    "day_three",
    "day_twelve",
    "day_two",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
anyhow = "1.0.93"
regex = "1.11.1"
winnow = "0.7.1"
rayon = "1.10.0"
glam = "0.29.2"
itertools = "0.13.0"
num-traits = "0.2"
